[gd_scene load_steps=3 format=3 uid="uid://bepo33hnrsmph"]

[ext_resource type="Script" uid="uid://bcw440aq48ck" path="res://script/menu_pause.gd" id="1_0o444"]
[ext_resource type="FontFile" uid="uid://bghhiurkdkf2i" path="res://assets/Fonts/VCR_OSD_MONO_1.001.ttf" id="2_ajcle"]

[node name="MenuPause" type="CanvasLayer"]
script = ExtResource("1_0o444")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitterButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 46.0
offset_right = 47.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ajcle")
theme_override_font_sizes/font_size = 30
text = "Quitter"

[node name="OptionsButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -4.0
offset_right = 47.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ajcle")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="ResumeButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -54.0
offset_right = 60.5
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ajcle")
theme_override_font_sizes/font_size = 30
text = "Reprendre
"

[node name="OptionsPanel" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = -188.0
offset_top = -72.0
offset_right = 224.0
offset_bottom = 148.0

[node name="Label" type="Label" parent="Panel/OptionsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.5
offset_top = -88.5
offset_right = 263.5
offset_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ajcle")
theme_override_font_sizes/font_size = 30
text = "A : Gauche
D : Droite
Espace : Sauter
Sprinter : Shift ou Clic droit"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/OptionsPanel"]
layout_mode = 0
offset_left = 443.0
offset_right = 469.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("2_ajcle")
theme_override_font_sizes/font_size = 30
text = "X"
